<resources>
    <string name="app_name">某时某刻</string>
    <string name="login">登录</string>
    <string name="welcome">欢迎</string>
    <string name="phone">手机号</string>
    <string name="phone_login">手机号</string>
    <string name="password">密码(6-16位数字或字母)</string>
    <string name="password_login">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="change_password">修改密码</string>
    <string name="register">立即注册</string>
    <string name="logout">退出登录</string>
    <string name="error_login_prompt">手机号或密码错误，请重新输入</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="password_again">确认密码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="reset_password">提交修改</string>
    <string name="retrieve_password">找回密码</string>
    <string name="logging">正在登录&#8230;</string>
    <string name="registering">正在注册&#8230;</string>
    <string name="committing">正在提交&#8230;</string>
    <string name="got_it">知道了</string>
    <string name="get_code_error_prompt">验证码获取失败或无效</string>
    <string name="get_code_true_prompt">验证码已发送</string>
    <string name="register_error_prompt">注册失败</string>
    <string name="userName_error_prompt">用户名已被注册，请更换.</string>
    <string name="data_not_empty_prompt">请将以上内容填写完整</string>
    <string name="error_two_password_prompt">两次密码输入不一致</string>
    <string name="password_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="sms_model">某时某刻验证短信</string>
    <string name="code_send_again">重新发送</string>
    <string name="phone_number_is_verified">该手机号已注册</string>
    <string name="phone_number_not_verified">该手机号未注册</string>
    <string name="phone_number_error">请填入正确的手机号</string>
    <string name="error_password">密码错误</string>
    <string name="error_reset_password_prompt">密码重置失败，请重试</string>
    <string name="tab_explore">发现</string>
    <string name="tab_home">关注</string>
    <string name="tab_add">发布</string>
    <string name="tab_notification">通知</string>
    <string name="tab_me">我的</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="gallery">相册</string>
    <string name="camera">照片</string>
    <string name="video">视频</string>
    <string name="permission_denied_prompt">应用权限被禁止，请在设置-权限管理中授权</string>
    <string name="post">分享</string>
    <string name="edit">编辑</string>
    <string name="back">返回</string>
    <string name="introduce_the_photo">添加一段描述，如果你愿意的话。</string>
    <string name="select_video">全部视频</string>
    <string name="select_photo">选择图片</string>
    <string name="prompt">提示</string>
    <string name="are_you_sure_to_cancel_the_editor">确实放弃编辑吗？</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="post_error">分享失败！</string>
    <string name="network_error">网络异常，请检查网络！</string>
    <string name="edit_media_null_prompt">添加点图片或视频吧。</string>
    <string name="forward">转发</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="empty_view">这里什么都没有</string>
    <string name="pull_load_more">正在加载</string>
    <string name="no_more">没有更多内容了</string>
    <string name="try_again">点击重试</string>
    <string name="input_http">输入或粘贴一个网址</string>
    <string name="http_is_empty">请输入一个有效的网址</string>
    <string name="http_not_provide">不支持此类链接</string>
    <string name="following">已关注</string>
    <string name="follow">关注</string>
    <string name="repost_default_text">转发</string>
    <string name="comment_num">共%1$d条评论</string>
    <string name="add_comment">添加评论...</string>
    <string name="reply_num">共%1$d条回复</string>
    <string name="comment_num_limit">140</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="loading_error">加载失败</string>
    <string name="post1">帖子</string>
    <string name="empty_profile">还没有填写个人简介</string>
    <string name="introduce_yourself">介绍一下自己吧</string>
    <string name="edit_user_info">编辑个人资料</string>
    <string name="follower">粉丝</string>
    <string name="profile">个人简介</string>
    <string name="are_you_sure_logout">确定退出登录吗？</string>
    <string name="nickname_length_limit">1-12个字符</string>
    <string name="user_info_edit_title">修改%1$s</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_error">修改失败</string>
    <string name="user_comment_your_post">%1$s评论了你的帖子</string>
    <string name="user_reply_your_comment">%1$s回复了你的评论</string>
    <string name="repost_success">转发成功</string>
    <string name="repost_error">转发失败</string>
    <string name="repost_from">&#8260;&#8260;转发自@</string>
    <string name="are_you_sure_delete_post">确定删除这条帖子吗？</string>
</resources>
