<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzk.moushimouke.View.Activity.LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:typeface="monospace"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/login_textview_background">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/nickname_pic"/>
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:lines="1"
            android:maxLength="11"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/phone_login"
            />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/password_pic"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:lines="1"
                android:maxLength="16"
                android:digits="@string/password_limit"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:hint="@string/password_login"/>
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textSize="19sp"
            android:textColor="@color/colorGreen"
            android:background="@drawable/button_selector"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">
            <Button
                android:id="@+id/login_forget_password"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:text="@string/forget_password"
                android:textColor="@color/colorWhite"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:background="@drawable/button_selector2"/>
            <Button
                android:id="@+id/login_register"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:background="@drawable/button_selector2"
                />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
