<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/user_info_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:textColor="@color/colorDark"/>
    <EditText
        android:id="@+id/user_info_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:hint="@string/nickname_length_limit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/user_info_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/user_info_edit_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/color_blue"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>