<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzk.moushimouke.View.Activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:typeface="monospace"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/nickname_pic"/>
            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:lines="1"
                android:maxLength="12"
                android:hint="@string/nickname"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/phone_pic"/>
            <EditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:digits="0123456789"
                android:maxLength="11"
                android:hint="@string/phone_number"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/verification_code_pic"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <EditText
                    android:id="@+id/register_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:digits="0123456789"
                    android:hint="@string/verification_code"/>

                <Button
                    android:id="@+id/register_get_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/password_pic"/>
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:inputType="textPassword"
                android:maxLength="16"
                android:lines="1"
                android:digits="@string/password_limit"
                android:hint="@string/password"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/password_pic"/>
            <EditText
                android:id="@+id/register_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:digits="@string/password_limit"
                android:hint="@string/password_again"/>
        </LinearLayout>
        <Button
            android:id="@+id/register_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:textSize="19sp"
            android:textColor="@color/colorGreen"
            android:background="@drawable/button_selector"/>
    </LinearLayout>
</FrameLayout>
