<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzk.moushimouke.View.Activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_textview_background">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/phone_pic"/>
                <EditText
                    android:id="@+id/reset_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="0123456789"
                    android:maxLength="11"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:hint="@string/phone_number"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/verification_code_pic"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <EditText
                    android:id="@+id/reset_verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:hint="@string/verification_code"/>
                <Button
                    android:id="@+id/reset_get_verification_code"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textColor="@color/colorGrey"
                    android:text="@string/get_verification_code"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/password_pic"/>
            <EditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="16"
                android:lines="1"
                android:digits="@string/password_limit"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:hint="@string/password"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/login_textview_background">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/password_pic"/>
            <EditText
                android:id="@+id/reset_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="16"
                android:lines="1"
                android:digits="@string/password_limit"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:hint="@string/password_again"/>
        </LinearLayout>
        <Button
            android:id="@+id/reset_reset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/reset_password"
            android:textSize="19sp"
            android:textColor="@color/colorGreen"
            android:background="@drawable/button_selector"/>
    </LinearLayout>
</FrameLayout>
