<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzk.moushimouke.View.Activity.UserInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/user_info_toolbar_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_info"
                android:textSize="19sp"
                android:textColor="@color/colorDark"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorLightGrey">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <FrameLayout
                android:id="@+id/user_info_portrait_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_info_portrait"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:civ_circle_background_color="@color/colorWhite"
                    />
                <FrameLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/oval_shape">
                    <ImageView
                        android:layout_width="16sp"
                        android:layout_height="16sp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit_portrait"/>
                </FrameLayout>
            </FrameLayout>
            <LinearLayout
                android:id="@+id/user_info_nickname_ll"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorWhite">
                <TextView
                    android:id="@+id/user_info_nickname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/user_info_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:textColor="@color/colorDark"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/user_info_profile_ll"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorWhite">
                <TextView
                    android:id="@+id/user_info_profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/user_info_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:textColor="@color/colorDark"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:id="@+id/user_info_change_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:text="@string/change_password"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                />

            <TextView
                android:id="@+id/user_info_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:text="@string/logout"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
